--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,6 @@ mixin_extras_version=0.2.0-rc.5
 
 # Indium (https://github.com/comp500/Indium)
 indium_version=1.0.27+mc1.20.1
+
+# ClientArguments (https://github.com/xpple/clientarguments)
+clientarguments_version=1.6
